--- a/src/input.css
+++ b/src/input.css
@@ -2,3 +2,5 @@
 @plugin "daisyui" {
     themes: light --default, dark --prefersdark, coffee
 }
+@plugin "tailwindcss-motion";
+@plugin "@midudev/tailwind-animations";
