--- a/src/output.css
+++ b/src/output.css
@@ -1508,9 +1508,6 @@
   .animate-heartbeat {
     animation: heartbeat 0.6s ease-out both;
   }
-  .animate-pulse {
-    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  }
   .resize {
     resize: both;
   }
@@ -1623,6 +1620,11 @@
     font-size: 1rem;
     padding-inline: calc(0.25rem * 3.5 - var(--border));
   }
+  .badge-xl {
+    --size: calc(var(--size-selector, 0.25rem) * 8);
+    font-size: 1.125rem;
+    padding-inline: calc(0.25rem * 4 - var(--border));
+  }
   .badge-xs {
     --size: calc(var(--size-selector, 0.25rem) * 4);
     font-size: 0.625rem;
@@ -1683,6 +1685,9 @@
   }
   .text-black {
     color: var(--color-black);
+  }
+  .text-neutral {
+    color: var(--color-neutral);
   }
   .italic {
     font-style: italic;
@@ -2593,19 +2598,6 @@
 @property --tw-ease {
   syntax: "*";
   inherits: false;
-}
-@keyframes pulse {
-  50% {
-    opacity: 0.5;
-  }
-}
-@keyframes pulse {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
 }
 @keyframes heartbeat {
   0% {
