--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-200: oklch(88.5% 0.062 18.334);
+    --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-black: #000;
     --spacing: 0.25rem;
     --text-xs: 0.75rem;
@@ -1171,6 +1173,14 @@
       }
     }
   }
+  .dropdown-bottom {
+    --anchor-v: bottom;
+    .dropdown-content {
+      top: 100%;
+      bottom: auto;
+      transform-origin: top;
+    }
+  }
   .dropdown-top {
     --anchor-v: top;
     .dropdown-content {
@@ -1428,8 +1438,34 @@
   .hidden {
     display: none;
   }
+  .inline {
+    display: inline;
+  }
   .table {
     display: table;
+  }
+  .size-5 {
+    width: calc(var(--spacing) * 5);
+    height: calc(var(--spacing) * 5);
+  }
+  .size-10 {
+    width: calc(var(--spacing) * 10);
+    height: calc(var(--spacing) * 10);
+  }
+  .size-50 {
+    width: calc(var(--spacing) * 50);
+    height: calc(var(--spacing) * 50);
+  }
+  .size-79 {
+    width: calc(var(--spacing) * 79);
+    height: calc(var(--spacing) * 79);
+  }
+  .size-100 {
+    width: calc(var(--spacing) * 100);
+    height: calc(var(--spacing) * 100);
+  }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
@@ -1449,8 +1485,20 @@
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
+  .w-100 {
+    width: calc(var(--spacing) * 100);
+  }
+  .w-fit {
+    width: fit-content;
+  }
   .w-full {
     width: 100%;
+  }
+  .min-w-fit {
+    min-width: fit-content;
+  }
+  .min-w-full {
+    min-width: 100%;
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -1520,6 +1568,22 @@
   .animate-heartbeat {
     animation: heartbeat 0.6s ease-out both;
   }
+  .link {
+    cursor: pointer;
+    text-decoration-line: underline;
+    &:focus {
+      --tw-outline-style: none;
+      outline-style: none;
+      @media (forced-colors: active) {
+        outline: 2px solid transparent;
+        outline-offset: 2px;
+      }
+    }
+    &:focus-visible {
+      outline: 2px solid currentColor;
+      outline-offset: 2px;
+    }
+  }
   .resize {
     resize: both;
   }
@@ -1544,11 +1608,17 @@
   .items-center {
     align-items: center;
   }
+  .items-end {
+    align-items: flex-end;
+  }
   .justify-around {
     justify-content: space-around;
   }
   .justify-between {
     justify-content: space-between;
+  }
+  .justify-center {
+    justify-content: center;
   }
   .justify-end {
     justify-content: flex-end;
@@ -1570,6 +1640,9 @@
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
+  }
+  .self-center {
+    align-self: center;
   }
   .overflow-hidden {
     overflow: hidden;
@@ -1605,6 +1678,13 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
+  .badge-dash {
+    color: var(--badge-color);
+    --badge-bg: #0000;
+    background-image: none;
+    border-color: currentColor;
+    border-style: dashed;
+  }
   .border-dashed {
     --tw-border-style: dashed;
     border-style: dashed;
@@ -1615,11 +1695,20 @@
   .bg-primary {
     background-color: var(--color-primary);
   }
+  .bg-red-200 {
+    background-color: var(--color-red-200);
+  }
   .mask-repeat {
     mask-repeat: repeat;
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -1627,11 +1716,24 @@
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
+  }
   .p-7 {
     padding: calc(var(--spacing) * 7);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
+  }
+  .badge-sm {
+    --size: calc(var(--size-selector, 0.25rem) * 5);
+    font-size: 0.75rem;
+    padding-inline: calc(0.25rem * 2.5 - var(--border));
+  }
+  .badge-xl {
+    --size: calc(var(--size-selector, 0.25rem) * 8);
+    font-size: 1.125rem;
+    padding-inline: calc(0.25rem * 4 - var(--border));
   }
   .badge-xs {
     --size: calc(var(--size-selector, 0.25rem) * 4);
@@ -1707,6 +1809,9 @@
   .text-wrap {
     text-wrap: wrap;
   }
+  .wrap-normal {
+    overflow-wrap: normal;
+  }
   .text-black {
     color: var(--color-black);
   }
@@ -1716,8 +1821,19 @@
   .italic {
     font-style: italic;
   }
+  .link-hover {
+    text-decoration-line: none;
+    &:hover {
+      @media (hover: hover) {
+        text-decoration-line: underline;
+      }
+    }
+  }
   .underline {
     text-decoration-line: underline;
+  }
+  .decoration-dashed {
+    text-decoration-style: dashed;
   }
   .decoration-wavy {
     text-decoration-style: wavy;
@@ -1741,6 +1857,9 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .outline-offset-2 {
+    outline-offset: 2px;
+  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
@@ -1761,6 +1880,10 @@
   .ease-out {
     --tw-ease: var(--ease-out);
     transition-timing-function: var(--ease-out);
+  }
+  .badge-accent {
+    --badge-color: var(--color-accent);
+    --badge-fg: var(--color-accent-content);
   }
   .badge-primary {
     --badge-color: var(--color-primary);
@@ -1783,10 +1906,29 @@
       }
     }
   }
+  .hover\:text-amber-50 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-amber-50);
+      }
+    }
+  }
   .hover\:text-secondary {
     &:hover {
       @media (hover: hover) {
         color: var(--color-secondary);
+      }
+    }
+  }
+  .hover\:link-hover {
+    &:hover {
+      @media (hover: hover) {
+        text-decoration-line: none;
+        &:hover {
+          @media (hover: hover) {
+            text-decoration-line: underline;
+          }
+        }
       }
     }
   }
@@ -1833,6 +1975,13 @@
       --size: calc(var(--size-selector, 0.25rem) * 7);
       font-size: 1rem;
       padding-inline: calc(0.25rem * 3.5 - var(--border));
+    }
+  }
+  .sm\:badge-xl {
+    @media (width >= 40rem) {
+      --size: calc(var(--size-selector, 0.25rem) * 8);
+      font-size: 1.125rem;
+      padding-inline: calc(0.25rem * 4 - var(--border));
     }
   }
   .sm\:text-lg {
