--- a/src/output.css
+++ b/src/output.css
@@ -1906,6 +1906,16 @@
       }
     }
   }
+  .hover\:badge-ghost {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-base-200);
+        background-color: var(--color-base-200);
+        color: var(--color-base-content);
+        background-image: none;
+      }
+    }
+  }
   .hover\:text-amber-50 {
     &:hover {
       @media (hover: hover) {
