--- a/src/output.css
+++ b/src/output.css
@@ -1173,14 +1173,6 @@
       }
     }
   }
-  .dropdown-bottom {
-    --anchor-v: bottom;
-    .dropdown-content {
-      top: 100%;
-      bottom: auto;
-      transform-origin: top;
-    }
-  }
   .dropdown-top {
     --anchor-v: top;
     .dropdown-content {
@@ -1438,58 +1430,17 @@
   .hidden {
     display: none;
   }
-  .inline {
-    display: inline;
-  }
   .table {
     display: table;
   }
-  .size-5 {
-    width: calc(var(--spacing) * 5);
-    height: calc(var(--spacing) * 5);
-  }
-  .size-10 {
-    width: calc(var(--spacing) * 10);
-    height: calc(var(--spacing) * 10);
-  }
-  .size-50 {
-    width: calc(var(--spacing) * 50);
-    height: calc(var(--spacing) * 50);
-  }
-  .size-79 {
-    width: calc(var(--spacing) * 79);
-    height: calc(var(--spacing) * 79);
-  }
-  .size-100 {
-    width: calc(var(--spacing) * 100);
-    height: calc(var(--spacing) * 100);
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-4 {
-    width: calc(var(--spacing) * 4);
-  }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-7 {
-    width: calc(var(--spacing) * 7);
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
-  }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
-  }
-  .w-fit {
-    width: fit-content;
   }
   .w-full {
     width: 100%;
@@ -1516,6 +1467,12 @@
   }
   .-rotate-5 {
     rotate: calc(5deg * -1);
+  }
+  .rotate-180 {
+    rotate: 180deg;
+  }
+  .rotate-360 {
+    rotate: 360deg;
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
@@ -1568,21 +1525,11 @@
   .animate-heartbeat {
     animation: heartbeat 0.6s ease-out both;
   }
-  .link {
-    cursor: pointer;
-    text-decoration-line: underline;
-    &:focus {
-      --tw-outline-style: none;
-      outline-style: none;
-      @media (forced-colors: active) {
-        outline: 2px solid transparent;
-        outline-offset: 2px;
-      }
-    }
-    &:focus-visible {
-      outline: 2px solid currentColor;
-      outline-offset: 2px;
-    }
+  .animate-rotate-180 {
+    animation: rotate-180 1s ease-in-out both;
+  }
+  .animate-rotate-360 {
+    animation: rotate-360 1s linear both;
   }
   .resize {
     resize: both;
@@ -1602,26 +1549,11 @@
   .place-items-end {
     place-items: end;
   }
-  .content-center {
-    align-content: center;
-  }
   .items-center {
     align-items: center;
   }
-  .items-end {
-    align-items: flex-end;
-  }
-  .justify-around {
-    justify-content: space-around;
-  }
   .justify-between {
     justify-content: space-between;
-  }
-  .justify-center {
-    justify-content: center;
-  }
-  .justify-end {
-    justify-content: flex-end;
   }
   .justify-items-center {
     justify-items: center;
@@ -1640,9 +1572,6 @@
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
-  }
-  .self-center {
-    align-self: center;
   }
   .overflow-hidden {
     overflow: hidden;
@@ -1695,20 +1624,11 @@
   .bg-primary {
     background-color: var(--color-primary);
   }
-  .bg-red-200 {
-    background-color: var(--color-red-200);
-  }
   .mask-repeat {
     mask-repeat: repeat;
   }
-  .p-1 {
-    padding: calc(var(--spacing) * 1);
-  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
-  }
-  .p-3 {
-    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -1716,24 +1636,11 @@
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
-  .p-6 {
-    padding: calc(var(--spacing) * 6);
-  }
   .p-7 {
     padding: calc(var(--spacing) * 7);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
-  }
-  .badge-sm {
-    --size: calc(var(--size-selector, 0.25rem) * 5);
-    font-size: 0.75rem;
-    padding-inline: calc(0.25rem * 2.5 - var(--border));
-  }
-  .badge-xl {
-    --size: calc(var(--size-selector, 0.25rem) * 8);
-    font-size: 1.125rem;
-    padding-inline: calc(0.25rem * 4 - var(--border));
   }
   .badge-xs {
     --size: calc(var(--size-selector, 0.25rem) * 4);
@@ -1748,15 +1655,6 @@
   }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
-  }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
-  .py-15 {
-    padding-block: calc(var(--spacing) * 15);
-  }
-  .py-20 {
-    padding-block: calc(var(--spacing) * 20);
   }
   .text-center {
     text-align: center;
@@ -1809,9 +1707,6 @@
   .text-wrap {
     text-wrap: wrap;
   }
-  .wrap-normal {
-    overflow-wrap: normal;
-  }
   .text-black {
     color: var(--color-black);
   }
@@ -1821,19 +1716,8 @@
   .italic {
     font-style: italic;
   }
-  .link-hover {
-    text-decoration-line: none;
-    &:hover {
-      @media (hover: hover) {
-        text-decoration-line: underline;
-      }
-    }
-  }
   .underline {
     text-decoration-line: underline;
-  }
-  .decoration-dashed {
-    text-decoration-style: dashed;
   }
   .decoration-wavy {
     text-decoration-style: wavy;
@@ -1857,9 +1741,6 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .outline-offset-2 {
-    outline-offset: 2px;
-  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
@@ -1881,10 +1762,6 @@
     --tw-ease: var(--ease-out);
     transition-timing-function: var(--ease-out);
   }
-  .badge-accent {
-    --badge-color: var(--color-accent);
-    --badge-fg: var(--color-accent-content);
-  }
   .badge-primary {
     --badge-color: var(--color-primary);
     --badge-fg: var(--color-primary-content);
@@ -1892,6 +1769,33 @@
   .btn-primary {
     --btn-color: var(--color-primary);
     --btn-fg: var(--color-primary-content);
+  }
+  .animate-duration-200 {
+    animation-duration: 200ms;
+  }
+  .animate-duration-\[1s\] {
+    animation-duration: 1s;
+  }
+  .animate-duration-\[1ss\] {
+    animation-duration: 1ss;
+  }
+  .animate-duration-\[3s\] {
+    animation-duration: 3s;
+  }
+  .animate-duration-\[4s\] {
+    animation-duration: 4s;
+  }
+  .animate-duration-\[20\] {
+    animation-duration: 20;
+  }
+  .animate-duration-\[20ns\] {
+    animation-duration: 20ns;
+  }
+  .animate-duration-\[20s\] {
+    animation-duration: 20s;
+  }
+  .animate-duration-\[50s\] {
+    animation-duration: 50s;
   }
   .animate-duration-\[2000ms\] {
     animation-duration: 2000ms;
@@ -1927,18 +1831,6 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-secondary);
-      }
-    }
-  }
-  .hover\:link-hover {
-    &:hover {
-      @media (hover: hover) {
-        text-decoration-line: none;
-        &:hover {
-          @media (hover: hover) {
-            text-decoration-line: underline;
-          }
-        }
       }
     }
   }
@@ -1985,13 +1877,6 @@
       --size: calc(var(--size-selector, 0.25rem) * 7);
       font-size: 1rem;
       padding-inline: calc(0.25rem * 3.5 - var(--border));
-    }
-  }
-  .sm\:badge-xl {
-    @media (width >= 40rem) {
-      --size: calc(var(--size-selector, 0.25rem) * 8);
-      font-size: 1.125rem;
-      padding-inline: calc(0.25rem * 4 - var(--border));
     }
   }
   .sm\:text-lg {
@@ -2786,6 +2671,22 @@
 @property --tw-ease {
   syntax: "*";
   inherits: false;
+}
+@keyframes rotate-180 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
+}
+@keyframes rotate-360 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 @keyframes heartbeat {
   0% {
